fix fonts on Safari
add -webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
to fix font rendering on Safari

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -8,6 +8,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #000;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 
